# daily-report-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.md  build.rs  config.yaml
.github/workflows/: release.yml
scripts/: install.sh  package-release.sh
skills/daily-git-skill/: SKILL.md  run.sh
src/: doctor.rs  lib.rs  main.rs  skill.rs
src/cli/: mod.rs
src/collectors/: docs.rs  git.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs  types.rs  utils.rs
src/reporting/: mod.rs  polish.rs  ppt.rs  template.rs
src/update/: mod.rs
templates/: daily.md.hbs  weekly-ppt.html.hbs  weekly.md.hbs  周报与日报_markdown_模板.md
