[package]
name = "daily_git"
version = "0.1.4"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
handlebars = "6.3"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3.13"
ureq = { version = "2.10", features = ["json"] }
walkdir = "2.5"
wait-timeout = "0.2"
